<resources>
    <string name="app_name">邮来邮网</string>
    <string name="againRequest">数据获取失败,请检查网络后点击重新加载</string>
    <string name="login">登录</string>
    <string name="home">首页</string>
    <string name="stamptap">邮票目录</string>
    <string name="panstamp">淘邮票</string>
    <string name="shop">购物车</string>
    <string name="my">我的</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stampshop">邮市</string>
    <string name="auction">竞拍</string>
    <string name="mall">商城</string>
    <string name="scan">扫码</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="scan_content">请输入您要找的内容</string>
    <string name="synthesize">综合</string>
    <string name="Release_time">发行时间:</string>
    <string name="Post_time">发行时间</string>
    <string name="price">价格</string>
    <string name="filter">筛选</string>
    <string name="Years">年代</string>
    <string name="comingOver">即将结束</string>
    <string name="WaitingShooting">等待开拍</string>
    <string name="category">类别:</string>
    <string name="theme">题材</string>
    <string name="resetting">重置</string>
    <string name="ensure">确定</string>
    <string name="search_keyword">请输入要搜索的词</string>
    <string name="Historical_Search">我的搜索历史</string>
    <string name="Hot_Search">热门搜索</string>
    <string name="clean_search_historical">清除搜索历史</string>
    <string name="classify">分类</string>
    <string name="stamptap_class">类别</string>
    <string name="person">人物</string>
    <string name="sales">销量</string>
    <string name="vieStamp">竞品邮集</string>
    <string name="metal_stamp">贵金属邮票</string>
    <string name="stamp">邮品</string>
    <string name="brand">品牌</string>
    <string name="login_register">点击登录/注册</string>
    <string name="withdraw">提现</string>
    <string name="balance">余额</string>
    <string name="non_balance">不可用余额</string>
    <string name="Commodity_order">商品订单</string>
    <string name="Auction_record">竞拍记录</string>
    <string name="Buy_back_order">回购订单</string>
    <string name="My_collection">我的邮集</string>
    <string name="favorite">收藏夹</string>
    <string name="Receipt_address">收货地址管理</string>
    <string name="Password_management">密码管理</string>
    <string name="about_us">关于我们</string>
    <string name="Version_update">版本更新</string>
    <string name="high_praise">给我们好评</string>
    <string name="quit">退出登录</string>
    <string name="market_price">市场价：</string>
    <string name="join_stamp">加入邮集</string>
    <string name="name">名称</string>
    <string name="stampnumber">志编号:</string>
    <string name="shortName">简称</string>
    <string name="stamptheme">题材</string>
    <string name="circulation">发行量</string>
    <string name="designer">设计师</string>
    <string name="author">原作者</string>
    <string name="edition">版别</string>
    <string name="Issuing_agency">发行机构</string>
    <string name="sculptor">雕刻者</string>
    <string name="Full_numbers">全套枚数</string>
    <string name="page_number">整版枚数</string>
    <string name="Printing_mechanism">印刷机构</string>
    <string name="Perforation">齿孔度数</string>
    <string name="gum">背胶</string>
    <string name="cancel">取消</string>
    <string name="stamp_shop">邮市</string>
    <string name="selling_price">售价：</string>
    <string name="freight">运费：</string>
    <string name="unDisplay">已下架</string>
    <string name="namecolon">名称:</string>
    <string name="stampnumbercolon">志编号:</string>
    <string name="shortNamecolon">简称:</string>
    <string name="designercolon">设计者:</string>
    <string name="categorycolon">类别:</string>
    <string name="themecolon">题材:</string>
    <string name="Full_numberscolon">全套枚数:</string>
    <string name="page_numbercolon">整版枚数:</string>
    <string name="Issuing_agencycolon">发行机构:</string>
    <string name="Issuing_timecolon">发行日期:</string>
    <string name="gumcolon">背胶:</string>
    <string name="Printing_mechanismcolon">印刷机构:</string>
    <string name="Perforationcolon">齿孔度数:</string>
    <string name="editioncolon">版别:</string>
    <string name="freightcolon">运费:</string>
    <string name="sales_volumecolon">销量：</string>
    <string name="starting_pricecolon">起拍价:</string>
    <string name="Business_introduction">业务介绍</string>
    <string name="Business_introduction_detail">
        扫码回购业务是邮来邮网平台针对购买过商城商品的顾客提供的回购业务,每个售出商品对应唯一的二维码,可扫码查看该商品购买价格与当前价等信息,并可向邮来邮网平台申请回购,获得回购收益.
    </string>
    <string name="work_flow">业务流程</string>
    <string name="work_flow_1">1、扫码查看当前回购价格</string>
    <string name="work_flow_2">2、在线提交回购申请</string>
    <string name="work_flow_3">3、提交回邮物流信息</string>
    <string name="work_flow_4">4、结款余额用户提现</string>
    <string name="start_auction">距离开拍:</string>
    <string name="Current_pricecolon">当前价:</string>
    <string name="AddStamp">已添加到我的邮集</string>
    <string name="design">设计家</string>
    <string name="please_import_phone">请输入手机号</string>
    <string name="please_press">请输入6-20位密码</string>
    <string name="Forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="usMe_content">
        作为集邮者交流网站,邮来邮网面向广大集邮爱好者提供高质量、个性化的服务,致力于推广集邮知识,传播集邮文化和内涵,向青年宣传和普及邮票知识与集邮文化.
    </string>
    <string name="custom_service_phone">客服电话:</string>
    <string name="Official_website">官方网站</string>
    <string name="term_of_service">服务条款</string>
    <string name="corporate_name">北京邮来邮网络科技有限公司</string>
    <string name="total">合计:</string>
    <string name="No_freight">(不含运费)</string>
    <string name="getCode">获取验证码</string>
    <string name="Code">验证码</string>
    <string name="hint_password">请输入6-20位密码</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="protocol">《邮来邮网服务协议》</string>
    <string name="Available_balance">可提现余额</string>
    <string name="bank_card">银行卡</string>
    <string name="Application_for_withdrawal">申请提现</string>
    <string name="Balance_of_payments">收支明细</string>
    <string name="No_detailed_information">暂无明细信息~</string>
    <string name="title_activity_revise">ReviseActivity</string>
    <string name="AddCard">+添加银行卡</string>
    <string name="cardholder">持卡人</string>
    <string name="card_num">卡号</string>
    <string name="bank">银行</string>
    <string name="Present_password">提现密码</string>
    <string name="Forget_password_">忘记密码？</string>
    <string name="Phone">手机号</string>
    <string name="submit">提交</string>
    <string name="Cash_withdrawal_amount">可提现金额</string>
    <string name="hint_apply_pw">请输入提现密码</string>
    <string name="please_msg_code">请输入短信验证码</string>
    <string name="apply_content">提现申请提交后，工作人员将在3个工作日进行确认，预计7个工作日到帐</string>
    <string name="UnBundling">解绑</string>
    <string name="revise">修改</string>
    <string name="tradeName">商品名称:</string>
    <string name="Buying">购买时间:</string>
    <string name="User">用户:</string>
    <string name="current_price">当前价格:</string>
    <string name="income">预计收益:</string>
    <string name="buy_price">回收价格:</string>
    <string name="contacts_phone">联系人手机号:</string>
    <string name="Confirm_buy_back">确认回购</string>
    <string name="fastMail_details">请在48小时内将邮品寄送至邮来邮网，并请将快递单号填写在输入框内提交</string>
    <string name="fastMail_address">北京市朝阳区望京利泽中二路1号中辰大厦306</string>
    <string name="Mailing_address">寄送地址:</string>
    <string name="addressee">收件人:</string>
    <string name="addressee_details">邮品回收部</string>
    <string name="tel">电话:</string>
    <string name="hint_fastMail">提示：退出后可在订单中打开该页面</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_details">邮品回购信息已经提交成功，工作人员将在收到邮品后的2个工作日内进行确认。邮品回购的款项将会直接转至您的邮来邮网帐号内。
    </string>
    <string name="click_order">点击查看订单</string>
    <string name="FastMailCompany">快递公司:</string>
    <string name="FastMailNum">快递单号:</string>
    <string name="loginPressWord">登录密码</string>
    <string name="withdrawPressWord">提现密码</string>
    <string name="isPhone">是否拨打电话</string>
    <string name="call">呼叫</string>
    <string name="edit">编辑</string>
    <string name="My_Stamp">我的邮集</string>
    <string name="consignee">收货人:</string>
    <string name="Distribution_mode">配送方式:</string>
    <string name="mode_of_payment">支付宝</string>
    <string name="Wechat">微信支付</string>
    <string name="Alipay">支付宝</string>
    <string name="finish">关闭</string>
    <string name="EMS">EMS</string>
    <string name="Wind_express">顺丰速递</string>
    <string name="delete">删除</string>
    <string name="addNewAddress">添加新地址</string>
    <string name="set_default">设为默认</string>
    <string name="recordAll">全部</string>
    <string name="recording">竞拍中</string>
    <string name="recordOut">已出局</string>
    <string name="recordSuccess">竞拍成功</string>
    <string name="payment_time">付款剩余时间</string>
    <string name="current_price_colon">当前价:</string>
    <string name="author_">作者:</string>
    <string name="date_of_issue">发布日期:</string>
    <string name="achieve">完成</string>
    <string name="Local_area">所在地区:</string>
    <string name="order_num">订单编号:</string>
    <string name="order_time">订单时间:</string>
    <string name="order_goods">商品名称:</string>
    <string name="order_buyTime">购买时间:</string>
    <string name="suit_count">枚/套</string>
    <string name="order_current_price">当前价格:</string>
    <string name="order_pre_earn">预计收益:</string>
    <string name="order_back_price">回收价格:</string>
    <string name="order_users">用户</string>
    <string name="order_phone">联系人手机号</string>
    <string name="order_Express_name">快递公司</string>
    <string name="order_express_num">快递单号</string>
    <string name="order_auditing">审核中</string>
    <string name="order_close">订单关闭</string>
    <string name="order_finish">已完成</string>
    <string name="order_finish_details">回购款项请到余额中查收</string>
    <string name="order_reject">订单驳回</string>
    <string name="order_reject_details">商品品相破损严重不予进行回购</string>
    <string name="buy_backInfo">回寄快递信息</string>
    <string name="order_wait">待寄送</string>
    <string name="order_Send">去寄送</string>
    <string name="obligation">待付款</string>
    <string name="remaining_time">付款剩余时间</string>
    <string name="order_number">订单号:</string>
    <string name="Exclusive_recommendation">专属推荐</string>
    <string name="Order_time">下单时间:</string>
    <string name="stamp_tap_details_story">1979年平凡的一天，艺坛大师黄永玉在家中接到了学生——国家邮政总局前总设计师邵柏林的拜访，并邀请他设计新中国成立第一套生肖邮票——“猴票”。为了纪念刚刚逝去的爱宠小猴，大师欣然应允。但黄永玉当时可能无论如何也不会料到，这枚小小的猴票的诞生，开启了怎样的邮票神话，会在今后的中国邮市经历怎样的风生水起。猴票由于是第一枚生肖邮票，图像美观，印刷精致，深受集邮爱好者欢迎，猴票在邮票市场价格上升很快。四方联和整版邮票的价格要更高。猴票价格上涨速度惊人。不愧是中国集邮的标志藏品。同时也是中国集邮市场的风向标。首套新邮票、新邮品均蕴有一种“龙头效应”，集邮者的求全心理，往往使这些首套邮品身价不凡，增值可观。尽管猴票发行之初很多人并未留意，但随着上世纪八十年代后期全国各地诸多邮市相继建立，集邮所蕴涵的经济意义愈发显露出来，猴票也就随之紧俏起来。至1992年，第二轮生肖猴票面市时，很多集邮者恍然大悟，怎么手上少了第一套猴票呢？于是“庚申猴”的价格在市场更是直线飙升，供求极度失衡。　虽然后来发行了第二套、第三套生肖邮票，其中也有猴票，但通常猴票是指1980年发行的第一张猴票。 猴票由于是雕版印刷，其票面的猴身上的毛在阳光犹如真的毛皮一般光彩熠熠。这也是甄别庚申猴的真伪的重要依据。所以有猴票的朋友要特别爱惜你猴票的票面，票面的好坏是价格高低的重要因素。</string>
    <string name="Agreement_Des">本协议是您与邮来邮网（以下简称“本网站”，网址：www.chinau.com.cn）所有者之间就本网站服务等相关事宜所订立的契约，请您仔细阅读并透彻理解本注册协议，当您在注册时勾选“我已阅读并同意《邮来邮网服务协议》”并注册成功，即意味着您同意该协议。
\n一、本网站服务条款的确认和接纳
\n1. 本网站的各项电子服务的所有权和运作权归邮来邮网所有。</string>

    <string name="regulations_agreement">规则与协议</string>
    <string name="i_konw_text">我知道了</string>
    <string name="auction_agreement">竞拍协议</string>
    <string name="bid_regulation">出价规则</string>
    <string name="price_range">价格范围</string>
    <string name="bid_range">出价幅度</string>
    <string name="bid_record_up">点击查看出价记录</string>
    <string name="bid_record_donw">点击收起出价记录</string>
    <string name="bid_record">出价记录</string>
    <string name="yet_record">已出价</string>
    <string name="count_no">次</string>
    <string name="text_apply_for">申请平台介入</string>
    <string name="apply_for_reason">申请原因:</string>
    <string name="add_address">添加收获地址</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="no_search_des">对不起，没有找到“邮票”的相关内容，\n请您修改关键字后重新搜索。</string>
</resources>
