<?xml version="1.0" encoding="utf-8"?>
<!--竞拍出价协议Dialog-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="325dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_item_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/regulations_agreement"
        android:textColor="#000"
        android:textSize="16sp" />

    <View style="@style/myline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15sp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableLeft="@mipmap/bid_regulation"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:text="@string/bid_regulation"
            android:textColor="#666"
            android:textSize="15sp" />

        <View style="@style/myline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/price_range"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#333"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/bid_range"
                    android:gravity="center"
                    android:textColor="#333"
                    android:layout_weight="1"
                    android:textSize="15sp" />

                </LinearLayout>

            <ListView
                android:id="@+id/regulations_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="0dp"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:fadingEdge="none"
                android:divider="@color/white"
                />

        </LinearLayout>

        <View style="@style/myline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableLeft="@mipmap/auction_agreement"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:text="@string/auction_agreement"
            android:textColor="#666"
            android:textSize="15sp" />

        <View style="@style/myline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="7sp"
            android:text="@string/Agreement_Des"
            android:lineSpacingExtra="5dp"
            android:textColor="#666"
            android:textSize="12sp" />


    </LinearLayout>

    <View style="@style/myline" />

    <Button
        android:id="@+id/iKonw_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@null"
        android:text="@string/i_konw_text"
        android:textColor="#000"
        android:layout_gravity="center"
        android:textSize="15sp"
        />
</LinearLayout>