<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/scan_icon"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_rectangle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Business_introduction"
                android:textColor="@color/font"
                android:textSize="12sp" />

            <View
                style="@style/myline"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Business_introduction_detail"
                android:textColor="#000"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_rectangle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/work_flow"
                android:textColor="@color/font"
                android:textSize="12sp" />

            <View
                style="@style/myline"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/grey_line"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/work_flow_1"
                android:textColor="#000"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@mipmap/grey_line"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/work_flow_2"
                android:textColor="#000"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@mipmap/grey_line"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/work_flow_3"
                android:textColor="#000"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@mipmap/grey_line"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/work_flow_4"
                android:textColor="#000"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/scan_back_buy_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_click_bg"
            android:text="立即扫码回购"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>
