<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@mipmap/success"
        android:drawablePadding="10dp"
        android:text="@string/submit_success"
        android:textColor="#000"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:maxLines="3"
        android:text="@string/submit_details"
        android:textColor="#999"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/commit_sumbit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        android:background="@mipmap/circle"
        android:gravity="center"
        android:text="@string/click_order"
        android:textColor="#fff"
        android:textSize="13sp" />

    <View style="@style/myline" />

</LinearLayout>